# nova-mvvm

./: .copier-answers.yml  .dockerignore  .gitlab-ci.yml  .readthedocs.yml  CONTRIBUTING.md  DEVELOPMENT.MD  README.md  build_docs.sh  pyproject.toml
dockerfiles/: Dockerfile
docs/: conf.py  index.rst  installation.rst
py_mvvm/pyqt6_binding/: binding.py
py_mvvm/trame_binding/: binding.py
src/mvvm_lib/: __init__.py  bindings_map.py  interface.py  pydantic_utils.py  utils.py
src/mvvm_lib/panel_binding/: binding.py
src/mvvm_lib/pyqt6_binding/: binding.py
src/mvvm_lib/trame_binding/: binding.py
src/nova/mvvm/: pydantic_utils.py
src/nova/mvvm/pyqt_binding/: binding.py
src/nova/mvvm/trame_binding/: binding.py
tests/: model.py  test_main_class.py  test_pyqt6_bindings.py  test_pyqt_bindings.py  test_trame_bindings.py
